--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
+    <meta name="keywords"
+        content="trailer, offline editing, editing, video editing, videos, Hanna Kronberg, content creator, video editor">
+    <meta name="description" content="Website to book Hanna Kronberg as a video editor">
+    <title>Video Editor Hanna Kronberg</title>
+
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
