Add assets folder, css folder, images folder and style.css and link style.css to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="trailer, offline editing, editing, video editing, videos, Hanna Kronberg, content creator, video editor">
     <meta name="description" content="Website to book Hanna Kronberg as a video editor">
     <title>Video Editor Hanna Kronberg</title>
-
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
