--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         </a>
     </div>
 
+    <!--home-->
+    <div class="home" id="home">
+        <h1>Hanna Kronberg</h1>
+        <p>Freelancing Video Editor <br>
+            based in Sweden</p>
+    </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
     <script>
