--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         <p>Freelancing Video Editor <br>
             based in Sweden</p>
     </div>
+
+    <!--portfolio-->
+    <div class="portfolio" id="portfolio">
+        <h2>Portfolio</h2>
+        <h3>Recent Edits</h3>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
+        <video src=""></video>
     </div>
 
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
