--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
         <video src=""></video>
     </div>
 
+    <!--about me-->
+
+    <div class="about-me" id="about-me">
+        <h2>About Me</h2>
+        <p>Hej, <br>
+            My name is Hanna Kronberg and I am a thorough and efficient certified Avid Offline Editor/Trailer producer.
+            <br>
+            I have worked at SVT as a trailer producer, Appelberg as a content marketing editor for, among other things.
+            <br>
+            Unicef, Atlas Copco, Scania etc. and before that at STRIX as Offline editor for SOS Sweden s.2 and as editor
+            at DRLNG for Christmas with Ernst. <br>
+            I edit, among other things, interviews, trailers, reality, various types of short films, clips for social
+            media and documentaries and I am very adaptable to the format offered. <br>
+            I can also perform light audio processing and grading as well as light retouching on still photos.
+        </p>
+    </div>
+
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
     <script>
         function myFunction() {
