--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
     </div>
 
     <!--about me-->
-
     <div class="about-me" id="about-me">
         <h2>About Me</h2>
         <p>Hej, <br>
@@ -65,6 +64,14 @@
             media and documentaries and I am very adaptable to the format offered. <br>
             I can also perform light audio processing and grading as well as light retouching on still photos.
         </p>
+    </div>
+
+    <!--pricing-->
+    <div class="pricing" id="pricing">
+        <h2>Pricing</h2>
+        <p>Daily: 4000 SEK</p>
+        <p>Hourly: 650 SEK</p>
+        <p>Monthly: depending on project</p>
     </div>
 
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
