Edit about me section and home section style

--- a/index.html
+++ b/index.html
@@ -54,15 +54,13 @@
     <div class="about-me" id="about-me">
         <h2>About Me</h2>
         <p>Hej, <br>
-            My name is Hanna Kronberg and I am a thorough and efficient certified Avid Offline Editor/Trailer producer.
-            <br>
-            I have worked at SVT as a trailer producer, Appelberg as a content marketing editor for, among other things.
-            <br>
-            Unicef, Atlas Copco, Scania etc. and before that at STRIX as Offline editor for SOS Sweden s.2 and as editor
-            at DRLNG for Christmas with Ernst. <br>
+            My name is Hanna Kronberg and I am a thorough and efficient, certified Avid Editor/Trailer producer.<br>
+            I have worked at SVT and TV4 as a trailer producer, Appelberg as a content marketing editor for, among other
+            things, Unicef, Atlas Copco, Scania etc. <br>
+            Before that I worked at STRIX as Offline editor for SOS Sweden s.2 and Torpet.<br>
             I edit, among other things, interviews, trailers, reality, various types of short films, clips for social
             media and documentaries and I am very adaptable to the format offered. <br>
-            I can also perform light audio processing and grading as well as light retouching on still photos.
+            I can also perform a bit audio processing and grading as well as light retouching on still photos.
         </p>
     </div>
 
@@ -72,6 +70,14 @@
         <p>Daily: 4000 SEK</p>
         <p>Hourly: 650 SEK</p>
         <p>Monthly: depending on project</p>
+    </div>
+
+    <!--contact-->
+    <div class="contact" id="contact">
+        <h2>Contact</h2>
+        <p>Name: Hanna Kronberg</p>
+        <p>Email: hannak@me.se</p>
+        <p>Telephone: +76 123 456 789</p>
     </div>
 
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
