Add layouts for responsiveness

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     <div class="portfolio" id="portfolio">
         <h2>Portfolio</h2>
         <h3>Recent Edits</h3>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
-        <video src=""></video>
+        <iframe class="video" src="https://youtu.be/TXEEGx4MPH0" frameborder="0"></iframe>
+        <iframe class="video" src="https://youtu.be/QoPE7s_QMA8" frameborder="0"></iframe>
+        <iframe class="video" src="https://youtu.be/X6hV09LYs2Q" frameborder="0"></iframe>
+        <iframe class="video" src="https://www.facebook.com/svt/videos/580337536189095" frameborder="0"></iframe>
+        <iframe class="video" src="https://www.facebook.com/Korrespondenterna/videos/917246152103760"
+            frameborder="0"></iframe>
+        <iframe class="video" src="https://www.facebook.com/kunskapskanalen/videos/662603371497137"
+            frameborder="0"></iframe>
+
     </div>
 
     <!--about me-->
