--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!--home-->
     <div class="home" id="home">
         <h1>Hanna Kronberg</h1>
+        <hr>
         <p>Freelancing Video Editor <br>
             based in Sweden</p>
     </div>
@@ -38,15 +39,23 @@
     <!--portfolio-->
     <div class="portfolio" id="portfolio">
         <h2>Portfolio</h2>
+        <hr>
         <h3>Recent Edits</h3>
-        <iframe class="video" src="https://youtu.be/TXEEGx4MPH0" frameborder="0"></iframe>
-        <iframe class="video" src="https://youtu.be/QoPE7s_QMA8" frameborder="0"></iframe>
-        <iframe class="video" src="https://youtu.be/X6hV09LYs2Q" frameborder="0"></iframe>
-        <iframe class="video" src="https://www.facebook.com/svt/videos/580337536189095" frameborder="0"></iframe>
-        <iframe class="video" src="https://www.facebook.com/Korrespondenterna/videos/917246152103760"
-            frameborder="0"></iframe>
-        <iframe class="video" src="https://www.facebook.com/kunskapskanalen/videos/662603371497137"
-            frameborder="0"></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/TXEEGx4MPH0" title="Livsgnistan" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/QoPE7s_QMA8"
+            title="Vad undrar du över när det kommer till testamenten?" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/X6hV09LYs2Q" title="Grupp 4 Tvåmanhög" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <iframe class="video" src="https://www.facebook.com/watch/?v=580337536189095"></iframe>
+        <iframe class="video" src="https://www.facebook.com/Korrespondenterna/videos/917246152103760"></iframe>
+        <iframe class="video" src="https://www.facebook.com/kunskapskanalen/videos/662603371497137"></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+        </iframe>
 
     </div>
 
