Adjust style for TV screen layout

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
         <iframe class="video" src="https://www.youtube.com/embed/X6hV09LYs2Q" title="Grupp 4 Tvåmanhög" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-        <iframe class="video" src="https://www.facebook.com/watch/?v=580337536189095"></iframe>
-        <iframe class="video" src="https://www.facebook.com/Korrespondenterna/videos/917246152103760"></iframe>
-        <iframe class="video" src="https://www.facebook.com/kunskapskanalen/videos/662603371497137"></iframe>
-        <iframe class="video" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-        </iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/K9vEc-iqhhY" title="MR. POPULAR" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/mHQCzVms_OQ"
+            title="Sweden Biologics Manufacturing Center – SBC eng version" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
 
     </div>
 
