--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <!--home-->
     <div class="home" id="home">
         <h1>Hanna Kronberg</h1>
-        <hr>
         <p>Freelancing Video Editor <br>
             based in Sweden</p>
     </div>
@@ -77,7 +76,7 @@
 
     <!--pricing-->
     <div class="pricing" id="pricing">
-        <h2>Pricing</h2>
+        <h2>Pricing as table</h2>
         <p>Daily: 4000 SEK</p>
         <p>Hourly: 650 SEK</p>
         <p>Monthly: depending on project</p>
@@ -85,10 +84,31 @@
 
     <!--contact-->
     <div class="contact" id="contact">
-        <h2>Contact</h2>
+        <h2>Contact maybe as table</h2>
         <p>Name: Hanna Kronberg</p>
         <p>Email: hannak@me.se</p>
         <p>Telephone: +76 123 456 789</p>
+    </div>
+
+    <!--footer-->
+    <div class="footer" id="footer">
+        <!--tos-->
+        <span class="tos">
+            <a href="#">Terms of Service</a>
+        </span>
+        <!--socials-->
+        <span class="socials">
+            <a href="https://www.instagram.com/hanna_kronberg/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCWdkpoqkGNwQv7VLxN_3pkw" target="_blank"><i
+                    class="fa-brands fa-square-youtube"></i></a>
+            <a href="https://www.facebook.com/hanna.kronberg.9" target="_blank"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/hanna-kronberg-534a2b199/" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+        </span>
+        <!--copyright-->
+        <span class="copyright">© Hanna Kronberg</span>
     </div>
 
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
