Solved problems and validate code external

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
         <h2>Portfolio</h2>
         <hr>
         <h3>Recent Edits</h3>
-        <iframe class="video" src="https://www.youtube.com/embed/TXEEGx4MPH0" title="Livsgnistan" frameborder="0"
+        <iframe class="video" src="https://www.youtube.com/embed/TXEEGx4MPH0" title="Livsgnistan"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         <iframe class="video" src="https://www.youtube.com/embed/QoPE7s_QMA8"
-            title="Vad undrar du över när det kommer till testamenten?" frameborder="0"
+            title="Vad undrar du över när det kommer till testamenten?"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-        <iframe class="video" src="https://www.youtube.com/embed/X6hV09LYs2Q" title="Grupp 4 Tvåmanhög" frameborder="0"
+        <iframe class="video" src="https://www.youtube.com/embed/X6hV09LYs2Q" title="Grupp 4 Tvåmanhög"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-        <iframe class="video" src="https://www.youtube.com/embed/K9vEc-iqhhY" title="MR. POPULAR" frameborder="0"
+        <iframe class="video" src="https://www.youtube.com/embed/K9vEc-iqhhY" title="MR. POPULAR"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         <iframe class="video" src="https://www.youtube.com/embed/mHQCzVms_OQ"
-            title="Sweden Biologics Manufacturing Center – SBC eng version" frameborder="0"
+            title="Sweden Biologics Manufacturing Center – SBC eng version"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
 
