Redo style.css and adjust index.html accordingly

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 
     <!--home-->
     <div class="home" id="home">
-        <h1>Hanna Kronberg</h1>
-        <p>Freelancing Video Editor <br>
-            based in Sweden</p>
+        <div class="cover-text">
+            <h1>Hanna Kronberg</h1>
+            <hr>
+            <p>Freelancing Video Editor <br>
+                based in Sweden</p>
+        </div>
     </div>
 
     <!--portfolio-->
@@ -63,6 +66,7 @@
     <!--about me-->
     <div class="about-me" id="about-me">
         <h2>About Me</h2>
+        <hr>
         <p>Hej, <br>
             My name is Hanna Kronberg and I am a thorough and efficient, certified Avid Editor/Trailer producer.<br>
             I have worked at SVT and TV4 as a trailer producer, Appelberg as a content marketing editor for, among other
@@ -76,18 +80,34 @@
 
     <!--pricing-->
     <div class="pricing" id="pricing">
-        <h2>Pricing as table</h2>
-        <p>Daily: 4000 SEK</p>
-        <p>Hourly: 650 SEK</p>
-        <p>Monthly: depending on project</p>
+
+        <h2>Pricing</h2>
+        <table>
+            <tr>
+                <td>Daily:</td>
+                <td>4000</td>
+                <td>SEK</td>
+            </tr>
+            <tr>
+                <td>Hourly:</td>
+                <td>650</td>
+                <td>SEK</td>
+            </tr>
+            <tr>
+                <td>Monthly:</td>
+                <td>depending on project</td>
+                <td></td>
+            </tr>
+        </table>
     </div>
 
     <!--contact-->
     <div class="contact" id="contact">
-        <h2>Contact maybe as table</h2>
-        <p>Name: Hanna Kronberg</p>
-        <p>Email: hannak@me.se</p>
-        <p>Telephone: +76 123 456 789</p>
+        <h2>Contact</h2>
+        <p>Name: Hanna Kronberg
+            <br>
+            Email: hannak.97@hotmail.se
+        </p>
     </div>
 
     <!--footer-->
@@ -97,16 +117,24 @@
             <a href="#">Terms of Service</a>
         </span>
         <!--socials-->
-        <span class="socials">
-            <a href="https://www.instagram.com/hanna_kronberg/" target="_blank"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UCWdkpoqkGNwQv7VLxN_3pkw" target="_blank"><i
-                    class="fa-brands fa-square-youtube"></i></a>
-            <a href="https://www.facebook.com/hanna.kronberg.9" target="_blank"><i
-                    class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/in/hanna-kronberg-534a2b199/" target="_blank"><i
-                    class="fa-brands fa-linkedin"></i></a>
-        </span>
+        <ul class="socials">
+            <li>
+                <a href="https://www.instagram.com/hanna_kronberg/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/channel/UCWdkpoqkGNwQv7VLxN_3pkw" target="_blank"><i
+                        class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/hanna.kronberg.9" target="_blank"><i
+                        class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/hanna-kronberg-534a2b199/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+            </li>
+        </ul>
         <!--copyright-->
         <span class="copyright">© Hanna Kronberg</span>
     </div>
