Adjust minor things like spacing in code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,6 @@
             title="Sweden Biologics Manufacturing Center – SBC eng version"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-
     </div>
 
     <!--about me-->
@@ -80,7 +79,6 @@
 
     <!--pricing-->
     <div class="pricing" id="pricing">
-
         <h2>Pricing</h2>
         <table>
             <tr>
@@ -139,7 +137,9 @@
         <span class="copyright">© Hanna Kronberg</span>
     </div>
 
+    <!--script: font awesome-->
     <script src="https://kit.fontawesome.com/d3c4a3d152.js" crossorigin="anonymous"></script>
+    <!--script: hamburger menu function-->
     <script>
         function myFunction() {
             var x = document.getElementById("nav-bar");
