--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!--footer-->
     <div class="footer" id="footer">
         <!--tos-->
-        <span class="tos">
+        <span>
             <a href="#">Terms of Service</a>
         </span>
         <!--socials-->
@@ -134,7 +134,7 @@
             </li>
         </ul>
         <!--copyright-->
-        <span class="copyright">© Hanna Kronberg</span>
+        <span>© Hanna Kronberg</span>
     </div>
 
     <!--script: font awesome-->
