--- a/index.html
+++ b/index.html
@@ -117,19 +117,23 @@
         <!--socials-->
         <ul class="socials">
             <li>
-                <a href="https://www.instagram.com/hanna_kronberg/" target="_blank"><i
+                <a href="https://www.instagram.com/hanna_kronberg/" target="_blank"
+                    aria-label="Link to Hanna Kronbergs Instagram opens in a new tab"><i
                         class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/channel/UCWdkpoqkGNwQv7VLxN_3pkw" target="_blank"><i
+                <a href="https://www.youtube.com/channel/UCWdkpoqkGNwQv7VLxN_3pkw" target="_blank"
+                    aria-label="Link to Hanna Kronbergs YouTube opens in a new tab"><i
                         class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/hanna.kronberg.9" target="_blank"><i
+                <a href="https://www.facebook.com/hanna.kronberg.9" target="_blank"
+                    aria-label="Link to Hanna Kronbergs Facebook opens in a new tab"><i
                         class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/hanna-kronberg-534a2b199/" target="_blank"><i
+                <a href="https://www.linkedin.com/in/hanna-kronberg-534a2b199/" target="_blank"
+                    aria-label="Link to Hanna Kronbergs LinkedIn opens in a new tab"><i
                         class="fa-brands fa-linkedin"></i></a>
             </li>
         </ul>
