--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <a href="#pricing">Pricing</a>
             <a href="#contact">Contact</a>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()"
+            aria-label="Link to JavaScript for hamburger icon navigation bar">
             <i class="fa fa-bars"></i>
         </a>
     </div>
