Resolved SEO issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#pricing">Pricing</a>
             <a href="#contact">Contact</a>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()"
+        <a href="#" class="icon" onclick="myFunction()"
             aria-label="Link to JavaScript for hamburger icon navigation bar">
             <i class="fa fa-bars"></i>
         </a>
@@ -61,14 +61,18 @@
             title="Sweden Biologics Manufacturing Center – SBC eng version"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
+
+        <p>
+            For more references just ask me.
+        </p>
+
     </div>
 
     <!--about me-->
     <div class="about-me" id="about-me">
         <h2>About Me</h2>
         <hr>
-        <p>Hej, <br>
-            My name is Hanna Kronberg and I am a thorough and efficient, certified Avid Editor/Trailer producer.<br>
+        <p>My name is Hanna Kronberg and I am a thorough and efficient, certified Avid Editor/Trailer producer.<br>
             I have worked at SVT and TV4 as a trailer producer, Appelberg as a content marketing editor for, among other
             things, Unicef, Atlas Copco, Scania etc. <br>
             Before that I worked at STRIX as Offline editor for SOS Sweden s.2 and Torpet.<br>
