Add navigation menu for laptop and above

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 
 <body>
 
-    <!-- nav menu top right -->
+    <!-- nav menu desktop-->
+    <div id="desktop-menu">
+        <ul>
+            <li> <a href="#home">Home</a> </li>
+            <li> <a href="#portfolio">Portfolio</a> </li>
+            <li> <a href="#about-me">About me</a> </li>
+            <li> <a href="#pricing">Pricing</a> </li>
+            <li> <a href="#contact">Contact</a> </li>
+        </ul>
+    </div>
+
+    <!-- nav menu mobil -->
     <div class="hamburger-menu">
         <div id="nav-bar">
             <a href="#home">Home</a>
