Add mailto for portfolio and contact sections

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             allowfullscreen></iframe>
 
         <p>
-            For more references just ask me.
+            For more references just ask <a href="mailto:hannak.97@hotmail.se">me</a>.
         </p>
 
     </div>
@@ -118,9 +118,8 @@
     <!--contact-->
     <div class="contact" id="contact">
         <h2>Contact</h2>
-        <p>Name: Hanna Kronberg
-            <br>
-            Email: hannak.97@hotmail.se
+        <p>Name: Hanna Kronberg<br>
+            <a href="mailto:hannak.97@hotmail.se">Email: hannak.97@hotmail.se</a>
         </p>
     </div>
 
