--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
         <p>Name: Hanna Kronberg<br>
             <a href="mailto:hannak.97@hotmail.se">Email: hannak.97@hotmail.se</a>
         </p>
+        <form class="contact-form" method="POST" action="" autocomplete="on">
+            <h2>Contact me!</h2>
+            <label for="name">Name</label>
+            <input id="name" class="text-input" type="text" name="name" required>
+            <label for="email">Email Address</label>
+            <input id="email" class="text-input" type="email" name="email_address" required>
+            <label for="text-field">Write your message here:</label>
+            <textarea name="text-field" id="text-field" cols="30" rows="10"></textarea>
+            <div class="buttons">
+                <input class="contact-me" type="submit" value="Send!">
+                <input class="contact-me" type="reset" value="Reset">
+            </div>
+        </form>
     </div>
 
     <!--footer-->
