--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
         <p>Name: Hanna Kronberg<br>
             <a href="mailto:hannak.97@hotmail.se">Email: hannak.97@hotmail.se</a>
         </p>
-        <form class="contact-form" method="POST" action="" autocomplete="on">
+        <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net/" autocomplete="on"
+            target="_blank">
             <h2>Contact me!</h2>
             <label for="name">Name</label>
             <input id="name" class="text-input" type="text" name="name" required>
