Add placeholder text and required attribute to contact-form

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
             <input id="name" class="text-input" type="text" name="name" required>
             <label for="email">Email Address</label>
             <input id="email" class="text-input" type="email" name="email_address" required>
-            <label for="text-field">Write your message here:</label>
-            <textarea name="text-field" id="text-field" cols="30" rows="10"></textarea>
+            <label for="text-field">Your Message</label>
+            <textarea name="text-field" id="text-field" cols="30" rows="10" placeholder="Write your message here..."
+                required></textarea>
             <div class="buttons">
                 <input class="contact-me" type="submit" value="Send!">
                 <input class="contact-me" type="reset" value="Reset">
