Bugfix overflow-x and adjust contact form for 320px width

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </li>
         </ul>
         <!--copyright-->
-        <span>© Hanna Kronberg</span>
+        <span class="copyright">© Hanna Kronberg</span>
     </div>
 
     <!--script: font awesome-->
