Bugfix overflow-x for phone screens and adjust portfolio

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             allowfullscreen></iframe>
 
         <p>
-            For more references just ask <a href="mailto:hannak.97@hotmail.se">me</a>.
+            For more references just ask <a href="mailto:hannak.97@hotmail.se">me</a>.<br><br>
         </p>
 
     </div>
